# jt

./: .gitignore  CMakeLists.txt  LICENSE  README.md  generate_coverage.sh
.github/workflows/: build,yaml  build.yaml
example/: data.json  template.jt.txt
inc/jt/: jt.hpp  template_i.hpp
src/app/: main.cpp
src/jt/: context.cpp  context.hpp  instructions.hpp  jt.cpp  jtemplate.cpp  jtemplate.hpp  parser.cpp  parser.hpp  path.cpp  path.hpp  template_builder.cpp  template_builder.hpp  trim.cpp  trim.hpp
src/jt/instructions/: block_instruction.cpp  get_instruction.cpp  instruction.cpp  loop_instruction.cpp  text_instruction.cpp
test-src/: tempfile.cpp  tempfile.hpp  test_from_file.cpp  test_parse_path.cpp  test_render.cpp  test_trim.cpp
